<resources>
    <string name="app_name">SchooledIn</string>
    <string name="font_brush_script_std">fonts/BrushScriptStd.otf</string>
    <string name="manifest_label_user_studios">用户工作室</string>
    <string name="manifest_label_favorites">用户收藏</string>
    <string name="manifest_label_user_questions">用户问题</string>
    <string name="manifest_label_user_answers">用户回答</string>
    <string name="manifest_label_my_notifications">我的通知</string>
    <string name="manifest_label_studio_essays">工作室文章</string>
    <string name="manifest_label_studio_questions">工作室问题</string>
    <string name="manifest_label_studio_members">工作室成员</string>
    <string name="manifest_label_question">问题</string>
    <string name="manifest_label_answer">回答</string>
    <string name="manifest_label_rich_editor">富文本编辑器</string>
    <string name="manifest_label_rich_text_show">显示富文本</string>
    <string name="manifest_label_publish_answer">发表回答</string>
    <string name="manifest_label_answer_comments">答案评论</string>
    <string name="manifest_label_essay_comments">文章评论</string>
    <string name="manifest_label_comment">评论</string>
    <string name="manifest_label_essay">文章</string>
    <string name="manifest_label_studios">工作室</string>
    <string name="item_index_basic_information">基本信息</string>
    <string name="item_index_my_notifications">我的通知</string>
    <string name="item_index_my_favorites">我的收藏</string>
    <string name="item_index_my_studios">我的工作室</string>
    <string name="item_index_settings">设置</string>
    <string name="item_index_help">帮助</string>
    <string name="item_index_sign_out">注销</string>
    <string name="item_index_option_search">搜索</string>
    <string name="tv_index_user_bio_hint">这位用户太懒了！</string>
    <string name="favorites_tab_questions">问题</string>
    <string name="favorites_tab_answers">回答</string>
    <string name="favorites_tab_essays">文章</string>
    <string name="pd_sign_in_sign_in_tips">正在登录...</string>
    <string name="error_message_sign_in_error">登录错误</string>
    <string name="error_message_sign_up_error">注册错误</string>
    <string name="error_message_bind_phone_error">绑定错误</string>
    <string name="error_message_edit_user_error">更新错误</string>
    <string name="error_message_add_studio_member">添加成员错误</string>
    <string name="error_message_401">用户名或密码不正确</string>
    <string name="error_message_404">没有找到</string>
    <string name="error_message_503">服务器正忙</string>
    <string name="error_message_network">请检查网络连接</string>
    <string name="item_index_options_search_hint">搜索 问题/用户/工作室</string>
    <string name="item_answer_option_settings">设置</string>
    <string name="search_tab_users">用户</string>
    <string name="search_tab_questions">问题</string>
    <string name="search_tab_studios">工作室</string>
    <string name="tv_user_info_bind_phone">绑定手机</string>
    <string name="sb_receive_notifications">收到新通知</string>
    <string name="fab_label_send_by_voice">语音</string>
    <string name="fab_label_send_by_text">文字</string>
    <string name="tv_audio_recording_up_for_cancel">手指上滑，取消生成</string>
    <string name="tv_audio_recording_want_to_cancle">松开手指，取消生成</string>
    <string name="tv_audio_recording_time_too_short">录音时间过短</string>
    <string name="tv_audio_recording_state_to_generate">长按下方按钮生成录音</string>
    <string name="tv_audio_recording_state_generated">已生成录音</string>
    <string name="tv_audio_recording_is_playing">正在播放录音...</string>
    <string name="tv_audio_recording_is_deleting">正在删除录音...</string>
    <string name="btn_audio_recording_long_click_record">长按录音</string>
    <string name="btn_audio_recording_click_play">点击播放</string>
    <string name="btn_audio_recording_click_delete">点击删除</string>
    <string name="tv_audio_recording_hang_up_finsh">松开结束</string>
    <string name="tv_audio_recording_release_cancel">松开取消</string>
    <string name="content_is_audio">[语音](点击听详细内容)</string>
    <string name="email_host_of_student">\@smail.nju.edu.cn</string>
    <string name="email_host_of_faculty">\@nju.edu.cn</string>
    <string name="email_host_of_phone"> -- 手机登录 -- </string>
</resources>
